# internal-link-analyzer

./: .gitignore  CLAUDE.md  README.md  audit.py  pyproject.toml  requirements.txt
.github/workflows/: audit.yml
clients/wheelhouseit/: config.yml
clients/zdscs/: config.yml
docs/: sop.md
engine/: __init__.py  action_list.py  classifier.py  config.py  links.py  registry.py  report.py  violations.py
engine/auditors/: __init__.py  blog_link_budget.py  canonical_conflicts.py  click_depth.py  duplicate_links.py  location_silo.py  neighborhood_silo.py  service_silo.py  universal_nav.py
snapshots/: README.md
snapshots/wheelhouseit/: action_list.csv  action_list.md  summary.md
snapshots/zdscs/: action_list.csv  action_list.md  summary.md
tests/: __init__.py  test_classifier.py  test_registry.py
tests/fixtures/: sample_config.yml  sample_config_nested_services.yml  sample_links.csv  sample_urls.csv
tests/test_auditors/: __init__.py  test_blog_link_budget.py  test_canonical_conflicts.py  test_click_depth.py  test_duplicate_links.py  test_location_silo.py  test_neighborhood_silo.py  test_service_silo.py  test_universal_nav.py
